fixed positioning on smaller window for add to cart modal

--- a/app/assets/stylesheets/api/product_show.css
+++ b/app/assets/stylesheets/api/product_show.css
@@ -322,6 +322,7 @@
 
 .product-cart-added-modal-image-and-description-container {
     display: flex;
+    margin-bottom: 1rem;
 }
 
 .product-modal-image-container {
